dimensiones comunes, colores comunes, theme, viewBinding y NavigationComponenet

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--Colores para la app-->
+    <color name="primaryColor">#22577e</color>
+    <color name="primaryLightColor">#5583ad</color>
+    <color name="primaryDarkColor">#002e51</color>
+    <color name="primaryTextColor">#ffffff</color>
 </resources>
