--- a/app/src/main/res/layout/fragment_searched_products.xml
+++ b/app/src/main/res/layout/fragment_searched_products.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:id="@+id/layout_btn_container"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
