--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="primaryLightColor">#5583ad</color>
     <color name="primaryDarkColor">#002e51</color>
     <color name="primaryTextColor">#ffffff</color>
+    <color name="hintColor">#818181</color>
 </resources>
