--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="primaryDarkColor">#002e51</color>
     <color name="primaryTextColor">#ffffff</color>
     <color name="hintColor">#818181</color>
+    <color name="amarillo">#F6F2D4</color>
 </resources>
