--- a/app/src/main/res/layout/item_categority.xml
+++ b/app/src/main/res/layout/item_categority.xml
@@ -9,7 +9,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="120dp"
         android:layout_marginBottom="@dimen/common_padding_min"
         android:layout_marginHorizontal="@dimen/common_padding_min">
 
@@ -24,14 +24,13 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:text="Abarrotes"
+                android:text="Categoría"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/black"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher" />
         </LinearLayout>
