Nueva pantalla principal de busqueda

--- a/app/src/main/res/layout/fragment_searched_products.xml
+++ b/app/src/main/res/layout/fragment_searched_products.xml
@@ -6,6 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".searchModule.searchedProducts.SearchedProductsFragment">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:theme="@style/ActionBar"
+            app:menu="@menu/menu_search"
+            app:title="Buscar" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <LinearLayout
         android:id="@+id/layout_btn_container"
         android:layout_width="match_parent"
@@ -14,7 +31,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/appbar">
 
 
         <com.google.android.material.button.MaterialButton
