--- a/app/src/main/res/layout/fragment_main_search.xml
+++ b/app/src/main/res/layout/fragment_main_search.xml
@@ -3,60 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".searchModule.search.SearchFragment">
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:theme="@style/ActionBar"
-            app:contentScrim="@color/primaryColor"
-            app:expandedTitleTextAppearance="@style/expandedBarTextStyle"
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            app:title="@string/txt_buscar">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingHorizontal="@dimen/common_padding_default"
-                android:paddingBottom="@dimen/common_padding_default">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="?attr/actionBarSize"
-                    android:text="@string/txt_buscar"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                    android:textColor="@color/white" />
-
-                <EditText
-                    android:id="@+id/et_search"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/common_padding_min"
-                    android:height="@dimen/common_padding_middle"
-                    android:background="@drawable/background_searchview"
-                    android:drawableStart="@drawable/ic_search"
-                    android:drawablePadding="@dimen/common_padding_min"
-                    android:hint="@string/hint_search"
-                    android:inputType="text"
-                    android:minHeight="48dp"
-                    android:paddingHorizontal="@dimen/common_padding_default"
-                    android:textColor="@color/primaryDarkColor"
-                    android:textColorHint="@color/hintColor" />
-            </LinearLayout>
-
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize" />
-
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+            app:menu="@menu/menu_search"
+            app:title="Buscar" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
@@ -108,13 +67,14 @@
             android:id="@+id/fab_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_padding_default"
             android:layout_marginEnd="@dimen/common_padding_default"
+            android:layout_marginBottom="@dimen/common_padding_default"
             android:contentDescription="@string/description_img"
             android:src="@drawable/ic_search"
             android:tint="@color/white"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:tint="@null" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
