--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph"
-    app:startDestination="@id/searchFragment">
+    app:startDestination="@id/mainSearchFragment">
     <fragment
         android:id="@+id/searchedProductsFragment"
         android:name="com.example.dsm_appcliente.searchModule.searchedProducts.SearchedProductsFragment"
@@ -23,12 +23,11 @@
             app:argType="com.example.dsm_appcliente.model.Product" />
     </fragment>
     <fragment
-        android:id="@+id/searchFragment"
-        android:name="com.example.dsm_appcliente.searchModule.search.SearchFragment"
-        android:label="fragment_search"
-        tools:layout="@layout/fragment_search" >
+        android:id="@+id/mainSearchFragment"
+        android:name="com.example.dsm_appcliente.searchModule.search.MainSearchFragment"
+        android:label="MainSearchFragment" >
         <action
-            android:id="@+id/action_searchFragment_to_searchedProductsFragment"
+            android:id="@+id/action_mainSearchFragment_to_searchedProductsFragment"
             app:destination="@id/searchedProductsFragment" />
     </fragment>
 </navigation>
